css/styles.css
main {
    margin: 50px auto 50px auto;
    max-width: 400px;
    padding: 20px;
}

body {
    font-family: Arial, sans-serif;
    text-align: left;
    margin: 0;
    padding: 0;
    background-color: var(--background-color);
    color: var(--text-color);
}

p {
    margin-top: 0px;
    margin-bottom: 16px;
}

:root {
    --background-color: #ffffff;
    --text-color: #000000;
    --post-background-color: #f9f9f9;
}

body.dark-mode {
    --background-color: #121212;
    --text-color: #ffffff;
    --post-background-color: #1e1e1e;
}

nav, footer {
    background-color: #f0f0f0;
    padding: 10px 20px;
}


/* Navigation Bar Styles */
nav {
    display: flex;
    border-bottom: 1px solid #ccc;
    justify-content: space-evenly; /* Distribute space between left and right */
    align-items: center; /* Vertically center the items */
    padding: 10px 20px;
    background-color: #f0f0f0; /* Light background color */
    transition: background-color 0.3s ease;
}

body.dark-mode nav {
    border-color: #444;
}

.nav-left,
.nav-right {
    display: flex;
    align-items: center;
}

.nav-left a.nav-link {
    margin-right: 15px; /* Space between links */
    text-decoration: none;
    color: inherit; /* Inherit text color based on theme */
    font-weight: bold;
    transition: color 0.3s ease;
}

.nav-left a.nav-link:hover {
    color: #007BFF; /* Change color on hover */
}

body.dark-mode .nav-left a.nav-link:hover {
    color: #66B2FF; /* Adjust hover color for dark mode */
}

.nav-left a.nav-link.active {
    border-bottom: 2px solid #007BFF; /* Underline active link */
    color: #007BFF; /* Change text color for active link */
    padding-top: 2px;
}

body.dark-mode .nav-left a.nav-link.active {
    border-bottom: 2px solid #66B2FF;
    color: #66B2FF;
}

.nav-right {
    gap: 20px; /* Space between stats and theme toggle */
}

#bluesky-stats {
    font-size: 0.9em;
    color: #000000;
    transition: color 0.3s ease;
}

body.dark-mode #bluesky-stats {
    color: #aaa;
}

#theme-toggle {
    cursor: pointer;
    background-color: rgb(213, 213, 213);
    padding: 3px 7px;
    transition: transform 0.3s ease;
    border-radius: 3px;
    font-weight: bold;
}

.dark-mode #theme-toggle {
    background-color: rgb(68, 68, 68);
}

#theme-toggle:hover {
    transform: scale(1.1); /* Slightly enlarge on hover */
}

/* Responsive Design */
@media (max-width: 768px) {
    nav {
        flex-direction: column;
        align-items: flex-start;
        padding-bottom: 12px;
    }

    .nav-right {
        width: 100%;
        justify-content: space-between;
    }

    .nav-left a.nav-link {
        margin-right: 10px;
    }

    .nav-left {
        margin-top: 8px;
    }

    #bluesky-stats {
        font-size: 0.8em;
        padding-top: 5px;
    }
}

/* Footer Styles */
footer {
    position: fixed;
    bottom: 0;
    right: 0;
    text-align: center;
    background-color: #f0f0f0;
    padding: 10px 20px;
    font-size: 0.8em;
    max-width: 230px;
    border-radius: 5px 0px 0px 0px;
    border-left: 1px solid #ccc;
    border-top: 1px solid #ccc;
}

body.dark-mode footer {
    background-color: #000000;
    color: #ffffff;
    border-color: #444;
}

footer span {
    font-weight: bold;
}

/* Post Styles */
.post {
    border: 1px solid #ccc;
    padding: 15px 15px 5px 15px;
    margin: 20px;
    border-radius: 5px;
    background-color: var(--post-background-color);
}

#recent-posts {
    max-width: 450px;
    margin: auto;
}

#recent-posts-header {
    text-align: center;
    font-weight: bold;
}

body.dark-mode .post {
    border-color: #444;
}

.post-text {
    font-size: 1.1em;
    margin-bottom: 10px;
    margin-top: 0px;
}

.post-image {
    max-width: 100%;
    height: auto;
    margin: 0px 0px 10px 0;
    border-radius: 5px;
    border: 1px solid #ccc;
}

body.dark-mode .post-image {
    border: 1px solid #444;
}

.post-date {
    font-size: 0.9em;
    color: #666;
    margin-bottom: 10px;
}

body.dark-mode .post-date {
    color: #aaa;
}

.post-counts {
    font-size: 0.8em;
}

.post-counts span {
    background-color: #e0e0e0;
    padding: 3px 7px;
    border-radius: 3px;
    display: inline-flex;
    margin-right: 10px;
    margin-bottom: 10px;
}

body.dark-mode .post-counts span {
    background-color: #3a3a3a;
    color: #fff;
}

/* Styling for the Bluesky post link */
.post-date a {
    color: #007BFF; /* Initial color */
    text-decoration: none; /* Remove underline */
    transition: color 0.3s ease;
}

.post-date a:hover {
    color: #0056b3; /* Darker shade on hover */
    text-decoration: underline; /* Underline on hover */
}

/* Style for the "See More Posts" button */
.see-more-button {
    display: block;
    margin: 20px auto;
    padding: 10px 20px;
    background-color: #007bff; /* Primary color */
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    transition: background-color 0.3s ease;
}

.see-more-button:hover {
    background-color: #0056b3; /* Darker shade on hover */
}

.see-more-button:disabled {
    background-color: #cccccc;
    cursor: not-allowed;
}

#recent-posts {
    margin-bottom: 40px;
}

